--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+* {
+  margin: 0;
+  padding: 0; }
 
-.container{
-    background-color: #ccc;
-    padding: 10px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.item {
-    background-color: #f1425d;
-    padding: 30px;
-    margin: 30px;
-    color:#fff;
-    font-size: 40px;
-     
-
-}
-
-.i2 {
-    height: 200px;
-}
-.i3 {
-    flex-basis:300px;
-}
-.i4 {
-    height: 200px;
-    order:1;
-}
+body {
+  background-color: #eb2f64; }
