layout markup and temp styling

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -26,6 +26,8 @@
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777; //text
     --color-grey-dark-3: #999;
+
+    --shadow-dark: 0 2rem 6rem rgba($color: #000000, $alpha: .3); //for box shadows 
     
 }
 
