--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,6 +1,6 @@
 .logo {
     height: 4rem;
-    margin-left: 3rem;
+    margin-left: 2rem;
 }
 
 .search {
@@ -60,7 +60,6 @@
 }
 
 .user-nav {
-    background-color: greenyellow;
     align-self: stretch;
 
     display: flex;
@@ -79,30 +78,36 @@
     }
     
     &__icon-box {
-        
+        position: relative;  
     }
 
     &__icon {
         height: 2.25rem;
         width: 2.25rem;
-        fill: var(--color-grey-dark-2);
-        
+        fill: var(--color-grey-dark-2);  
+         
     }
 
     &__notification {
+        font-size: .8rem;
+        height: 1.75rem;
+        width: 1.75rem;
+        border-radius: 50%;
+        background-color: var(--color-primary);
+        color: #fff;
+        position: absolute;
+        top:1.5rem;
+        right:1rem;
 
-    }
-
-    &__user {
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__user-photo {
         height: 3.75rem;
         border-radius: 50%;
+        margin-right: 1rem;
     }
 
-    &__user-name {
-
-    }
 }
