--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ body {
 
 .hotel-view {
   background-color: #fff;
-  background-color: orangered;
   flex: 1;
   height: 80rem; }
 
@@ -187,3 +186,10 @@ body {
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem; }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    height: 30rem;
+    display: block; }
