--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -179,3 +179,17 @@
     text-align: center;
     padding: 2.5rem;
 }
+
+.gallery {
+    display: flex;
+
+    &__item {
+
+    }
+
+    &__photo {
+        width:100%;
+        height: 30rem;
+        display: block;
+    }
+}
