--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,7 +28,9 @@
     --color-grey-dark-3: #999;
 
     --shadow-dark: 0 2rem 6rem rgba($color: #000000, $alpha: .3); //for box shadows 
+    --shadow-light: 0 2rem 5rem rgba(0,0,0, .06);
     
+    --line : 1px solid var(--color-grey-light-2);
 }
 
 * {
